# mirrory

./: .gitignore  CMakeLists.txt  README.md
include/: aabb.h  level.h  light_ray.h  object.h
src/: aabb.cpp  level.cpp  light_ray.cpp  main.cpp  object.cpp
